video title fixed on mobile

--- a/styles.css
+++ b/styles.css
@@ -92,7 +92,7 @@ h1 {
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     width: 15vw;
     position: relative;
-    margin-top: 55vh;
+    margin-top: 50vh;
     margin-left: 70vw;
 }
 
